--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h4 {
     font-weight: 100;
     line-height: 1.714;
     letter-spacing: 4.5px;
-    color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);s
 }
 
 h5 {
@@ -167,17 +167,18 @@ header {
 }
 
 .nav-menu {
-    width: 845px;
+    width: 100%;
+    padding-left: 24px;
     border: 0px solid white;
 }
 
 .nav-menu__list {
     display: flex;
-    justify-content: space-around;
+    justify-content: start;
 }
 
 .nav-menu__item {
-    margin-left: 0px;
+    margin-left: 80px;
 }
 
 .nav-menu__link {
