--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
    display:block;
  }
 
- nav ul {
+ ul {
    list-style:none;
  }
 
@@ -89,8 +89,8 @@
 /* alegreya-regular - latin */
 @font-face {
     font-family: 'Alegreya';
-    font-style: normal;
-    font-weight: 100;
+    font-style: 400;
+    font-weight: ;
     src: url('fonts/alegreya-v19-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
          url('fonts/alegreya-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -101,6 +101,49 @@
 }
 
 
+
+
+
+/* playfair-display-700 - vietnamese_latin-ext_latin_cyrillic */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 700;
+  src: url('fonts/playfair-display-v25-vietnamese_latin-ext_latin_cyrillic-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/playfair-display-v25-vietnamese_latin-ext_latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/playfair-display-v25-vietnamese_latin-ext_latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/playfair-display-v25-vietnamese_latin-ext_latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
+       url('fonts/playfair-display-v25-vietnamese_latin-ext_latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/playfair-display-v25-vietnamese_latin-ext_latin_cyrillic-700.svg#PlayfairDisplay') format('svg'); /* Legacy iOS */
+}
+
+
+@font-face {
+  font-family: 'Proxima Nova Thin';
+  src: url('fonts/proxima_nova_thin.eot'); /* IE 9 Compatibility Mode */
+  src: local(''),			
+      url('fonts/proxima_nova_thin.woff2') format('woff2'), /* Super Modern Browsers */
+      url('fonts/proxima_nova_thin.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+      url('fonts/proxima_nova_thin.ttf') format('truetype'), /* Safari, Android, iOS */
+      url('fonts/proxima_nova_thin.svg#proxima_nova_thin') format('svg'); /* Chrome < 4, Legacy iOS */
+}
+
+/* alegreya-700 - latin */
+@font-face {
+  font-family: 'Alegreya';
+  font-style: normal;
+  font-weight: 700;
+  src: url('fonts/alegreya-v19-latin-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/alegreya-v19-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/alegreya-v19-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/alegreya-v19-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('fonts/alegreya-v19-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/alegreya-v19-latin-700.svg#Alegreya') format('svg'); /* Legacy iOS */
+}
+
+
 body {
     width: auto;
     background-image: url("img/header/background_img.jpg");
@@ -108,9 +151,28 @@ body {
     background-position: center top;
 }
 
+.wrapp {
+  display: flex;
+  width: 1260px;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0px solid green;
+}
+
+.one-colomn {
+  flex-direction: column;
+}
 
 h3 {
-
+  font-size: 48px;
+  font-family: "Alegreya";
+  color: rgb(86, 83, 76);
+  font-weight: 700;
+  line-height: 0.625;
+  letter-spacing: 1.5px;
+  text-align: center;
 }
 
 h4 {
@@ -119,19 +181,41 @@ h4 {
     font-weight: 100;
     line-height: 1.714;
     letter-spacing: 4.5px;
-    color: rgb(255, 255, 255);s
+    color: rgb(255, 255, 255);
 }
 
 h5 {
-
+  font-size: 24px;
+  font-family: "Alegreya";
+  color: rgb(86, 83, 76);
+  font-weight: bold;
+  line-height: 1.25;
+  text-align: center;
 }
 
 h6 {
-
 }
 
+.sec-description {
+  font-size: 14px;
+  font-family: "Proxima Nova", sans-serif;
+  color: rgb(86, 83, 76);
+  line-height: 1.714;
+  letter-spacing: 1.5px;
+  text-align: center;
+}
 
-/*header,*/ .section-1, .section-2, .section-3,
+.gold {
+  color: #aa8568;
+  font-weight: 700;
+  letter-spacing: 1.65px;
+}
+
+.normal {
+  font-weight: normal;
+}
+
+/*header, .section-1, .section-2,*/ .section-3,
 .section-4, .section-5, .section-6, .section-7,
 .section-8,.section-9, footer   {
     opacity: 0;
@@ -152,33 +236,31 @@ header {
     border: 0px solid black;
 }
 
-.header__wrapp {
-    display: flex;
-    width: 1260px;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    border: 0px solid green;
-}
-
 .logo_white {
     margin-top: 10px;
 }
 
 .nav-menu {
     width: 100%;
-    padding-left: 24px;
-    border: 0px solid white;
 }
 
 .nav-menu__list {
     display: flex;
     justify-content: start;
+    padding-left: 70px;
+    border: 0px solid white;
 }
 
 .nav-menu__item {
-    margin-left: 80px;
+    display: flex;
+    margin-left: 35px;
+}
+
+.nav-menu__item:nth-child(-n+4):after {
+  content: '~';
+  color: #fff;
+  padding-top: 3px;
+  margin-left: 35px;
 }
 
 .nav-menu__link {
@@ -207,9 +289,203 @@ header {
 /*>>>>>>>>>>>>>>>> END HEADER <<<<<<<<<<<<<<<<*/
 
 /*>>>>>>>>>>>>>>>>> SECTION-1 <<<<<<<<<<<<<<<<*/
+
+.website-title {
+  margin-top: 204px;
+  padding-left: 6px;
+}
+
+.website-title__text {
+  font-family: "Playfair Display";
+  font-size: 92px;
+  font-weight: 700;
+  letter-spacing: 7px;
+  color: rgb(255, 255, 255);
+  text-shadow: 0px 1px 0px rgba(61, 48, 41, 0.004);
+}
+
+.decore-line {
+  margin-top: 32px;
+}
+
+.website-subtitle {
+  margin-top: 55px;
+  padding-left: 2px;
+}
+
+.website-subtitle__text {
+  font-size: 24px;
+  font-family: 'Proxima Nova Thin', sans-serif;
+  font-weight: 500;
+  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 2.7px;
+  color: rgb(255, 255, 255);
+}
+
+.website-present__button {
+  display: flex;
+  flex-direction: column;
+  width: 195px;
+  height: 48px;
+  background-color: rgba(86, 83, 76, 0.529);
+  border: 1px dashed #9e9c93;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 63px;
+  padding-left: 4px;
+}
+
+.decor-circle {
+  position: relative;
+  width: auto;
+  max-width: 1600px;
+  height: 23px;
+  background-color: rgb(255, 255, 255);
+  margin-left: auto;
+  margin-right: auto;
+
+  margin-top: 213px;
+  border: 0px solid green;
+
+}
+
+.decor-circle__circle {
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  width: 81px;
+  height: 81px;
+  bottom: -100%;
+  right: 47.5%;
+  border: 0px solid red;
+  border-radius: 50%;
+}
+
+.decor-circle__item {
+  position: absolute;
+  bottom: -145%;
+  right: 46.7%;
+  border: 0px solid red;
+}
+
 /*>>>>>>>>>>>>>>> END SECTION-1 <<<<<<<<<<<<<<*/
 
 /*>>>>>>>>>>>>>>>>> SECTION-2 <<<<<<<<<<<<<<<<*/
+.section-2 {
+  background-image: url(img/section_2/img_texture.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 3px;
+  border: 0px solid green;
+  z-index: -3;
+}
+
+.block-art {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 630px;
+
+  border: 0px solid black;
+}
+
+.block-art__title {
+  margin-top: 83px;
+}
+
+.block-art__subtitle {
+  margin-top: 15px;
+}
+
+.block-art__description {
+  width: 490px;
+  margin-top: 56px;
+}
+
+.block-chef__title {
+  margin-top: 35px;
+}
+
+.block-chef__main {
+  display: flex;
+  width: 425px;
+  justify-content: space-evenly;
+  align-items: center;
+
+  margin-top: 43px;
+  margin-bottom: 25px;
+    
+  border: 0px solid green;
+}
+
+.block-chef__name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 110px;
+  height: 60px;
+
+  border-top: 1px solid #d7d5ca;
+  border-bottom: 1px solid #d7d5ca;
+}
+
+.block-chef__img {
+  margin-left: 10px;
+  padding-bottom: 95px;
+}
+
+.block-tastes{
+  position: relative;
+  width: 630px;
+  margin-top: -20px;
+
+  border: 0px solid green;
+}
+
+.block-tastes__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.block-tastes__item {
+
+}
+
+.block-tastes__img {
+  display: block;
+  margin: 10px;
+  margin-left: 10px;
+  outline-offset: -12px;
+  outline-width: 5px;
+  outline-style: solid;
+  outline-color: rgb(255, 255, 255);
+}
+
+.block-tastes-title {
+  position: absolute;
+  content: url(img/section_2/smart.png);
+  opacity: 0.9;
+  bottom: 27%;
+  left: 30.5%;
+  z-index: 1;
+}
+
+.block-tastes-title__text {
+  position: absolute;
+  font-size: 30px;
+  font-family: "Alegreya";
+  font-weight: normal;
+  letter-spacing: 2px;
+  color: rgb(201, 177, 118);
+  line-height: 1.2;
+  text-align: center;
+  bottom: 43.5%;
+  left: 38%;
+  z-index: 2;
+}
 /*>>>>>>>>>>>>>>> END SECTION-2 <<<<<<<<<<<<<<*/
 
 /*>>>>>>>>>>>>>>>>> SECTION-3 <<<<<<<<<<<<<<<<*/
