--- a/style.css
+++ b/style.css
@@ -236,10 +236,10 @@ h6 {
 }
 
 /*header, .section-1, .section-2, .section-3,
-.section-4, .section-5, */ footer   {
+.section-4, .section-5,  footer   {
     opacity: 0;
 }
-
+*/
 /*>>>>>>>>>>>>>>>> END GLOBAL <<<<<<<<<<<<<<<<*/
 
 /*>>>>>>>>>>>>>>>>>> HEADER <<<<<<<<<<<<<<<<<<*/
@@ -1013,5 +1013,87 @@ header {
 }
 /*>>>>>>>>>>>>>>> END SECTION-5 <<<<<<<<<<<<<<*/
 
+
 /*>>>>>>>>>>>>>>>>>> FOOTER <<<<<<<<<<<<<<<<<<*/
+
+footer {
+  max-width: 1600px;
+  padding: 1px;
+  background-color: #f3f1e9;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-wrapp {
+  max-width: 1260px;
+  margin-top: 65px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer-nav-menu {
+  margin-bottom: 80px;
+}
+
+.footer-logo {
+}
+
+.footer-nav-menu__list {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 68px;
+  border-top: 1px solid green;
+  border-bottom: 1px solid green;
+}
+
+.footer-nav-menu__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  
+  
+  margin-right: 0px;
+  margin-left: 0px;
+  
+}
+
+.footer-nav-menu__item-1 {
+  margin-top: 25px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.footer-nav-menu__link {
+}
+
+.gray-1 {
+  color: rgb(86, 83, 76);
+  letter-spacing: 1.2px;
+  font-weight: bold;
+  letter-spacing: 4px;
+}
+
+.footer-nav-menu__item:nth-child(-n+2):after {
+  position: absolute;
+  content: '~';
+  right: -45px;
+  
+}
+
+.footer-nav-menu__item:nth-child(-n+3) {
+  margin-right: 85px;
+}
+
+.footer-nav-menu__item:nth-last-child(-n+2)::before {
+  position: absolute;
+  content: '~';
+  left: -50px;
+  
+}
+
+.footer-nav-menu__item:nth-last-child(-n+3) {
+  margin-left: 85px;
+}
 /*>>>>>>>>>>>>>>>> END FOOTER <<<<<<<<<<<<<<<<*/
