--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 /*>>>>>>>>>>>>>>>>>>> RESET <<<<<<<<<<<<<<<<<<*/
 /*
+/*
+/*
  * html5doctor.com Reset Stylesheet v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/)
  * Richard Clark (http://richclarkdesign.com)
  * http://cssreset.com
